# RC-DataGenerator

./: 1.in  2.in  CMakeCache.txt  CMakeLists.txt  T2.data
Alexis/: CMakeCache.txt  CMakeLists.txt  DataGenerator  Makefile  T1.data  T2.data  TG.data  cmake_install.cmake  main  main.cpp
Alexis/src/: Attribute.h  Generator.h  Row.h
André/: ALGORITMO  CMakeCache.txt  DataGenerator  ENTRADA DE DADOS  Makefile  T1.data  TG.data  case1.inGenerator  case6.inGenerator  cmake_install.cmake  main.cpp
André/TestCases/VarDividend/1/: T2.data
André/TestCases/VarDividend/10/: T2.data
André/TestCases/VarDividend/2/: T1.data  T2.data
André/TestCases/VarDividend/3/: T2.data  TG.data
André/TestCases/VarDividend/4/: T1.data  (+1 more)
André/src/: Attribute.cpp
TestCases/: a.out  generateTestsInput.cpp
TestCases/VarDividend/1/: T1.data  TG.data
TestCases/VarDividend/10/: T1.data  TG.data
TestCases/VarDividend/2/: TG.data
TestCases/VarDividend/3/: T1.data
TestCases/VarDividend/4/: TG.data
TestCases/VarDividend/5/: T2.data
TestCases/VarDividend/6/: TG.data
TestCases/VarDividend/8/: T1.data  TG.data
TestCases/VarDividend/9/: T1.data  T2.data
TestCases/VarDivisor/1/: T1.data  T2.data
TestCases/VarDivisor/10/: T2.data
TestCases/VarDivisor/2/: T1.data  T2.data  TG.data
TestCases/VarDivisor/3/: TG.data
TestCases/VarDivisor/4/: T2.data
TestCases/VarDivisor/5/: T1.data  T2.data  TG.data
TestCases/VarDivisor/6/: T1.data  T2.data
TestCases/VarDivisor/7/: T1.data  T2.data
TestCases/VarDivisor/8/: TG.data
src/: Attribute.h  Row.cpp  Row.h  Utils.cpp  Utils.h
(+23 files in other folders)
